[package]
name = "lango"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.7", features = ["tokio"] }
clap = { version = "4.5.18", features = ["derive"] }
directories = "5.0.1"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
